--- a/style1.css
+++ b/style1.css
@@ -1,31 +1,46 @@
-@media screen and (max-width:768px){
-    .images{
-        display: flex;
-        flex-direction: column;
-    }
-    img{
-        height: auto;
-        width: 200px;
-    }
+body {
+    height: 1000px; 
+    background-image: linear-gradient(rgb(161, 116, 190), rgb(124, 45, 226));
 }
 
-@media screen and (min-width:768px){
-    .images{
-        display: grid;
-        grid-template-rows: repeat(5, 1fr);
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-    }
-    img{
-        width: 400px;
-    }
-}
 
-@media screen and (min-width:1024px) {
-    .images{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: repeat(4,1fr);
-    }
-    
-}
+
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(93, 140, 228);
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: rgb(162, 198, 240);
+  }
+
+  h1 {
+    padding: 20px; 
+    margin-left: 500px;
+    margin-right: 500px;
+    color: white;
+    font-size: 60px;
+    text-align: center; 
+    border-style: solid;
+    border-color: rgb(152, 255, 203); 
+    border: 5px solid #84d8db;
+    border-radius: 25px;
+
+  }
