--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0px; 
+  margin: 0px;
   height: 1000px;
-  background-color: green;
+  background-color: rgb(204, 71, 197);
 
 }
 h1 {
@@ -16,9 +16,10 @@ h1 {
   border: 5px solid #84d8db;
   border-radius: 25px;
 }
-p {
+
+.ps {
   text-align: center; 
-  font-size: 20px;
+  font-size: 30px;
 }
 
 ul {
@@ -44,6 +45,29 @@ ul {
   /* Change the link color to #111 (black) on hover */
   li a:hover {
     background-color: rgb(162, 198, 240);
+  }
+
+
+  table, th, td {
+    border: 2px solid;
+  }
+  table {
+    margin-left: 400px;
+    margin-right: 300px;
+   
+    border-collapse: collapse;
+  }
+  th {
+  height: 50px;
+  }
+
+  .headings {
+    
+    font-size: 40px;
+  }
+
+  .f1 {
+    font-size: 25px;
   }
   .footer {
     font-size:18px;
