--- a/style3.css
+++ b/style3.css
@@ -1,6 +1,17 @@
 body {
   margin: 0px; 
   height: 1000px;
+  background-color: rgb(17, 157, 167); 
+}
+
+h1 {
+  text-align: center;
+  color: rgb(148, 219, 148);
+}
+#p1 {
+  text-align: center;
+  font-size: 25px;
+  color: rgb(148, 219, 148);
 }
 
 
@@ -24,7 +35,7 @@ ul {
     text-decoration: none;
   }
   
-  /* Change the link color to #111 (black) on hover */
+  
   li a:hover {
     background-color: rgb(162, 198, 240);
   }
@@ -32,3 +43,43 @@ ul {
     font-size:18px;
     text-align: center; 
   }
+  
+input[type=text], select, textarea {
+  width: 100%; 
+  padding: 12px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+  resize: vertical 
+}
+
+
+input[type=submit] {
+  background-color: #e595e5;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #16335f;
+}
+.container {
+  border-radius: 5px;
+  background-color: #e671b9;
+  padding: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
