--- a/style1.css
+++ b/style1.css
@@ -43,6 +43,15 @@ ul {
 
   }
 
+  img {
+    float: left;
+    width:  200px;
+    height: 200px;
+    object-fit: cover;
+    margin-top: 100px;
+}
+
+
   .footer {
     font-size:18px;
     text-align: center; 
