--- a/style4copy.css
+++ b/style4copy.css
@@ -31,25 +31,74 @@ body {
 
     h1 {
         text-align: center; 
+        font-size: 45px;
+        color: rgb(154, 10, 154);
+        padding-top: 10px;
+    }
+    h2{
+
+    text-align: center; 
+    font-size: 25px;
+    padding: 10px;
+    color: rgb(154, 10, 154);
+
     }
 
     img {
         
-        width:  350px;
-        height: 350px;
-        object-fit: cover;
-        margin-right: 170px;
-    }
-
-    .row {
-      display: flex;
-      margin-top: 50px;
+      width:  350px;
+      height: 350px;
+      object-fit: cover;
       
+      display: flexbox;
+      align-self: center;
+
+      border: 5px solid #555;
+  
+  
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 40px;
+    
+  }
+  
+  /* Create two equal columns that sits next to each other */
+  .column {
+    flex: 50%;
+    padding: 0 40px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: text-bottom;
+    margin-left: 10px;
+  }
+  
+
+
+
+    body {
+      background-color: lightblue;
     }
 
-    .column {
-      display: flex;
-      margin-top: 60px;
-      padding: 0px
-    }
-    
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 1000px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 500px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+
+}
