--- a/style2.css
+++ b/style2.css
@@ -1,21 +1,51 @@
-body {
-  margin: 0px;
-  height: 2000px;
-  background-color: rgb(204, 71, 197);
+@media screen and (max-width: 768px){
+  body {
+    margin: 0px; 
+    height: 1000px; 
+    background-color: rgb(204, 71, 197);  }
 
-}
-h1 {
-  padding: 20px; 
-  margin-left: 500px;
-  margin-right: 500px;
-  color: white;
-  font-size: 60px;
-  text-align: center; 
-  border-style: solid;
-  border-color: rgb(152, 255, 203); 
-  border: 5px solid #84d8db;
-  border-radius: 25px;
-}
+    h1 {
+      text-align: center;
+      color: white;
+      font-size: 60px;
+      border-style: solid;
+      border-color: rgb(152, 255, 203); 
+      border: 5px solid #84d8db;
+      border-radius: 25px;
+      margin-left: 100px;
+      margin-right: 100px;
+    
+    }
+
+    .container {
+      margin-left: auto;
+      margin-right: auto;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+  }
+
+  @media screen and (min-width:768px) {
+    body {
+      margin: 0px; 
+    height: 1000px; 
+    background-color: rgb(204, 71, 197); 
+    }
+    h1 {
+      padding: 20px; 
+      margin-left: 500px;
+      margin-right: 500px;
+      color: white;
+      font-size: 60px;
+      text-align: center; 
+      border-style: solid;
+      border-color: rgb(152, 255, 203); 
+      border: 5px solid #84d8db;
+      border-radius: 25px;
+    
+    }
+  }
+
 
 .ps {
   text-align: center; 
@@ -29,6 +59,30 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: rgb(93, 140, 228);
+  }
+
+  div.container {
+    text-align: center;
+  }
+
+  ul.info2 {
+    display: inline-block;
+    text-align: left;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    
+  }
+
+  .in{
+    text-align: left;
+    font-size: 19px;
+    display: block;
+    color: rgb(138, 23, 23);
+   padding: 60px 53px;
+    text-decoration: none;
+    background-color: green;
   }
   
   li {
@@ -95,8 +149,4 @@ ul {
     font-size: 30px;
     margin: 50px;
     font-weight: bold; 
-  }
-
-  .infoList {
-    
   }
