--- a/style1.css
+++ b/style1.css
@@ -1,49 +1,85 @@
-body {
-  margin: 0px; 
-  height: 1000px; 
-    background-image: linear-gradient(rgb(161, 116, 190), rgb(124, 45, 226));
-}
+/* mobile */
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(93, 140, 228);
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change the link color to #111 (black) on hover */
-  li a:hover {
-    background-color: rgb(162, 198, 240);
+@media screen and (max-width: 768px) {
+  body {
+    margin: 0px;
+    height: 1000px;
+    background-image: linear-gradient(rgb(161, 116, 190), rgb(124, 45, 226));
   }
 
   h1 {
-    padding: 20px; 
+    text-align: center;
+    color: white;
+    font-size: 60px;
+    border-style: solid;
+    border-color: rgb(152, 255, 203);
+    border: 5px solid #84d8db;
+    border-radius: 25px;
+    margin-left: 100px;
+    margin-right: 100px;
+
+  }
+
+}
+
+
+@media screen and (min-width:768px) {
+  body {
+    margin: 0px;
+    height: 1000px;
+    background-image: linear-gradient(rgb(161, 116, 190), rgb(124, 45, 226));
+  }
+
+  h1 {
+    padding: 20px;
     margin-left: 500px;
     margin-right: 500px;
     color: white;
     font-size: 60px;
-    text-align: center; 
+    text-align: center;
     border-style: solid;
-    border-color: rgb(152, 255, 203); 
+    border-color: rgb(152, 255, 203);
     border: 5px solid #84d8db;
     border-radius: 25px;
 
   }
+}
 
-  .footer {
-    font-size:18px;
-    text-align: center; 
-  }
+
+
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(93, 140, 228);
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: rgb(162, 198, 240);
+}
+
+
+
+
+
+
+
+.footer {
+  font-size: 18px;
+  text-align: center;
+}
