--- a/style3.css
+++ b/style3.css
@@ -1,13 +1,14 @@
 body {
-  margin: 0px; 
+  margin: 0px;
   height: 1000px;
-  background-color: rgb(17, 157, 167); 
+  background-color: rgb(17, 157, 167);
 }
 
 h1 {
   text-align: center;
   color: rgb(148, 219, 148);
 }
+
 #p1 {
   text-align: center;
   font-size: 25px;
@@ -16,43 +17,46 @@ h1 {
 
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(93, 140, 228);
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  
-  li a:hover {
-    background-color: rgb(162, 198, 240);
-  }
-  .footer {
-    font-size:18px;
-    text-align: center; 
-  }
-  
-input[type=text], select, textarea {
-  width: 100%; 
-  padding: 12px; 
-  border: 1px solid #ccc; 
-  border-radius: 4px; 
-  box-sizing: border-box; 
-  margin-top: 6px; 
-  margin-bottom: 16px; 
-  resize: vertical 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(93, 140, 228);
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+
+li a:hover {
+  background-color: rgb(162, 198, 240);
+}
+
+.footer {
+  font-size: 18px;
+  text-align: center;
+}
+
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
 }
 
 
@@ -68,6 +72,7 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: #16335f;
 }
+
 .container {
   border-radius: 5px;
   background-color: #e671b9;
@@ -78,7 +83,10 @@ input[type=submit]:hover {
 
 
 @media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
+
+  .col-25,
+  .col-75,
+  input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
