--- a/style1.css
+++ b/style1.css
@@ -20,6 +20,30 @@
 
   }
 
+  h2{
+    font-size: 50px;
+    color: aquamarine;
+    font-style: bold;
+    text-align: center;
+  }
+
+  mark{
+    background-color: #84d8db;
+    color: white;
+    text-align: center;
+  }
+
+  h3{
+    font-size: 50px;
+    font-style: bold;
+    text-align: left;
+  }
+
+  mark{
+    background-color: #84d8db;
+    color: white;
+  }
+
 }
 
 
@@ -43,10 +67,131 @@
     border-radius: 25px;
 
   }
+
+  h2{
+    font-size: 50px;
+    color: aquamarine;
+    font-style: bold;
+    text-align: center;
+  }
+
+  mark{
+    background-color: #84d8db;
+    color: white;
+  }
+
+  h3{
+    font-size: 50px;
+    color: aquamarine;
+    font-style: bold;
+    text-align: left;
+  }
+
+  mark{
+    background-color: #84d8db;
+    color: white;
+  }
 }
 
 
 
+
+html,body {
+
+  width:100%;
+  height:100%;
+}
+body {
+ margin: 0;
+}
+.container 
+{
+width:100%;
+height:100%;
+}
+#slideshow {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width:100%;
+  height:100%;
+  display: inline-block;
+}
+.elemnt,.elemnt1,.elemnt2,.elemnt3 {
+position: absolute;
+left: 0;
+width: 100%;
+background-repeat: no-repeat;
+background-size: cover;
+height: 100%;
+display: inline-block;
+text-align: center;
+}
+.elemnt {
+  animation: xfade 16s 8s infinite;
+  background-image: url(Homeless1.jpg);
+}
+.elemnt1 {
+  animation: xfade 16s 6s infinite;
+  
+  background-image: url(Homeless15.jpg);
+  
+}
+.elemnt2 {
+  animation: xfade 16s 2s infinite;
+  
+  background-image: url(Homeless2.jpg);
+}
+
+ 
+  
+
+  
+@keyframes xfade{
+  17% {
+    opacity:1;
+  }
+  25% {
+    opacity:0;
+  }
+  92% {
+    opacity:0;
+  }
+}
+@keyframes xfade1{
+  17% {
+    opacity:1;
+  }
+  25% {
+    opacity:0;
+  }
+  92% {
+    opacity:0;
+  }
+}
+@keyframes xfade2{
+  17% {
+    opacity:1;
+  }
+  25% {
+    opacity:0;
+  }
+  92% {
+    opacity:0;
+  }
+}
+@keyframes xfade3{
+  17% {
+    opacity:1;
+  }
+  25% {
+    opacity:0;
+  }
+  92% {
+    opacity:0;
+  }
+}
 
 ul {
   list-style-type: none;
