--- a/style1.css
+++ b/style1.css
@@ -4,7 +4,9 @@
   body {
     margin: 0px;
     height: 1000px;
-    background-image: linear-gradient(rgb(161, 116, 190), rgb(124, 45, 226));
+    background-color: rgb(161, 116, 190);
+
+    
   }
 
   h1 {
@@ -12,46 +14,61 @@
     color: white;
     font-size: 60px;
     border-style: solid;
-    border-color: rgb(152, 255, 203);
-    border: 5px solid #84d8db;
+    border: 5px solid #dacee4;
     border-radius: 25px;
     margin-left: 100px;
     margin-right: 100px;
-
+    text-shadow: 4px 3px 2px black;
   }
 
-  h2{
-    font-size: 50px;
-    color: aquamarine;
-    font-style: bold;
-    text-align: center;
-  }
-
-  mark{
-    background-color: #84d8db;
-    color: white;
-    text-align: center;
-  }
-
-  h3{
-    font-size: 50px;
-    font-style: bold;
-    text-align: left;
-  }
-
-  mark{
-    background-color: #84d8db;
-    color: white;
-  }
+#pT {
+  text-align: center;
+  font-size: 26px;
+  font-weight: bold;
+  color: white;
 
 }
+#line {
+  padding-top:20px;
+  text-align:center;
+  font-weight: bold;
+  font-size: 17px;
+  color: rgb(255, 204, 255);
+}
 
+#p2 {
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  padding-top:15px;
+  margin-left: 22px;
+  margin-right: 22px;
+}
+
+
+#slideshow {
+  list-style: none;
+  margin-left: 50px;
+  position: relative;
+  width:80%;
+  height:100%;
+  display: inline-block;
+}
+.aa {
+  text-align: center;
+  color: rgb(245, 116, 245);
+  font-size: 19px;
+  padding-top: 15px;
+  padding-bottom:40px;
+}
+
+}
 
 @media screen and (min-width:768px) {
   body {
     margin: 0px;
     height: 1000px;
-    background-image: linear-gradient(rgb(161, 116, 190), rgb(124, 45, 226));
+    background-color: rgb(161, 116, 190);
   }
 
   h1 {
@@ -62,34 +79,52 @@
     font-size: 60px;
     text-align: center;
     border-style: solid;
-    border-color: rgb(152, 255, 203);
-    border: 5px solid #84d8db;
+    border: 5px solid #dacee4;
     border-radius: 25px;
+    text-shadow: 4px 3px 2px black;
 
   }
 
-  h2{
-    font-size: 50px;
-    color: aquamarine;
-    font-style: bold;
+  #pT {
     text-align: center;
-  }
-
-  mark{
-    background-color: #84d8db;
+    font-size: 30px;
+    font-weight: bold;
     color: white;
   }
 
-  h3{
+  
+  #line {
+    font-weight: bold;
     font-size: 50px;
-    color: aquamarine;
-    font-style: bold;
-    text-align: left;
+    color: rgb(255, 204, 255);
+  }
+  #p2 {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    padding-top:20px;
+    margin-left: 40px;
+    margin-right: 40px;
   }
 
-  mark{
-    background-color: #84d8db;
-    color: white;
+  #slideshow {
+    list-style: none;
+    margin-left: 280px;
+    padding-top:40px;;
+    position: relative;
+    width:60%;
+    height:100%;
+    display: inline-block;
+  }
+  .aa {
+    text-align: center;
+    color: purple;
+    font-size: 19px;
+    padding-top: 15px;
+  }
+
+  #line {
+    margin-left:20px;
   }
 }
 
@@ -97,7 +132,6 @@
 
 
 html,body {
-
   width:100%;
   height:100%;
 }
@@ -109,22 +143,14 @@ body {
 width:100%;
 height:100%;
 }
-#slideshow {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  width:100%;
-  height:100%;
-  display: inline-block;
-}
+
 .elemnt,.elemnt1,.elemnt2,.elemnt3 {
 position: absolute;
 left: 0;
 width: 100%;
 background-repeat: no-repeat;
 background-size: cover;
-height: 100%;
+height: 70%;
 display: inline-block;
 text-align: center;
 }
@@ -143,9 +169,6 @@ text-align: center;
   
   background-image: url(Homeless2.jpg);
 }
-
- 
-  
 
   
 @keyframes xfade{
@@ -213,7 +236,6 @@ li a {
   text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
 li a:hover {
   background-color: rgb(162, 198, 240);
 }
