--- a/style2.css
+++ b/style2.css
@@ -1,33 +1,76 @@
 @media screen and (max-width: 768px) {
   body {
     margin: 0px;
-    height: 1000px;
+    height:3000px;
     background-color: rgb(202, 225, 184);
+    
   }
 
   h1 {
     text-align: center;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 60px;
     border-style: solid;
-    border-color: rgb(152, 255, 203);
-    border: 5px solid #84d8db;
+    border: 5px solid #3c6f4b;
     border-radius: 25px;
     margin-left: 100px;
     margin-right: 100px;
-
+    text-shadow: 4px 3px 2px rgb(255, 250, 250);
   }
 
   .containerr {
     margin-left: 30px;
     margin-right: 30px;
   }
+
+  .bio {
+    font-size:20px;
+    margin-left: 25px;
+    margin-right: 25px;
+    text-align: center;
+  }
+
+  .ps {
+    text-align: center;
+    font-size: 25px;
+    padding-bottom: 30px;
+    margin-left:25px;
+    margin-right:25px;
+  }
+  .mis {
+    text-align: center;
+    margin-left:29px;
+    margin-right:29px;
+    font-size:20px;
+  }
+
+
+
+  #line {
+    padding-top:25px;
+    padding-bottom:22px;
+    text-align:center;
+    font-weight: bold;
+    font-size: 17px;
+    color: rgb(22, 93, 36);
+  }
+  div.container {
+    margin:100px;
+    text-align: center;
+    border-style: solid;
+    border-width:4px;
+    border-color: rgb(3, 67, 3);
+    padding-top: 30px;
+    padding-bottom:30px;
+  }
+
+
 }
 
 @media screen and (min-width:768px) {
   body {
     margin: 0px;
-    height: 1000px;
+    height: 3000px;
     background-color: rgb(202, 225, 184);
   }
 
@@ -35,25 +78,77 @@
     padding: 20px;
     margin-left: 500px;
     margin-right: 500px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 60px;
     text-align: center;
     border-style: solid;
-    border-color: rgb(152, 255, 203);
-    border: 5px solid #84d8db;
+    border: 5px solid #3c6f4b;
     border-radius: 25px;
+    text-shadow: 4px 3px 2px rgb(255, 250, 250);
 
   }
+
+  .bio {
+    font-size:30px;
+    margin-left: 32px;
+    margin-right: 32px;
+    text-align: center;
+  }
+  .ps {
+    text-align: center;
+    font-size: 30px;
+    padding-bottom: 30px;
+    margin-left:25px;
+    margin-right:25px;
+  }
+
+  .containerr {
+    margin-left:300px;
+  }
+
+  .mis {
+    text-align: center;
+    margin: 60px;
+    font-size:22px;
+  }
+  #line {
+    padding-top:25px;
+    padding-bottom:22px;
+    text-align:center;
+    font-weight: bold;
+    font-size: 50px;
+    color: rgb(22, 93, 36);
+  }
+  div.container {
+    margin-left:580px;
+    margin-right: 580px;
+    text-align: center;
+    border-style: solid;
+    border-width:4px;
+    border-color: rgb(3, 67, 3);
+    padding-top: 30px;
+    padding-bottom:30px;
+  }
+
+}
+h2 {
+  text-align:center;
+  text-shadow: 4px 3px 2px rgb(255, 250, 250);
+  font-size: 50px;
+}
+h3 {
+text-align: center;
+font-size:40px;
+text-shadow: 4px 3px 2px rgb(255, 250, 250);
 }
 
-
-.ps {
+.info {
   text-align: center;
-  font-size: 30px;
-  padding-bottom: 30px;
+  font-size:20px;
 }
 
-ul {
+
+.ul1 {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -61,9 +156,7 @@ ul {
   background-color: rgb(93, 140, 228);
 }
 
-div.container {
-  text-align: center;
-}
+
 
 ul.info2 {
   display: inline-block;
@@ -76,29 +169,31 @@ ul.info2 {
 }
 
 .in {
-  text-align: left;
+  text-align: center;
   font-size: 19px;
   display: block;
-  color: rgb(138, 23, 23);
-  padding: 60px 53px;
+  padding: 20px 30px;
   text-decoration: none;
-  background-color: green;
+  background-color: rgb(202, 225, 184);
 }
 
-li {
+.in a:hover {
+  background-color: rgb(28, 106, 28);
+}
+
+.li1 {
   float: left;
 }
 
-li a {
+.li1 a {
   display: block;
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
+.li1 a:hover {
   background-color: rgb(162, 198, 240);
 }
 
@@ -134,24 +229,9 @@ th {
   text-align: center;
 }
 
-.bio {
-  text-align: center;
-  font-size: 30px;
-  margin: 50px;
 
-}
 
-h2 {
-  text-align: center;
-  font-size: 50px;
-}
 
-.mis {
-  text-align: center;
-  font-size: 30px;
-  margin: 50px;
-
-}
 
 .miss {
   text-align: center;
@@ -161,10 +241,9 @@ h2 {
 }
 
 img {
-
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 75%;
-  border: 5px solid #555;
+  border: 5px solid rgb(27, 65, 24);
 }
