--- a/style3.css
+++ b/style3.css
@@ -1,19 +1,82 @@
-body {
-  margin: 0px;
-  height: 1000px;
-  background-color: rgb(17, 157, 167);
+@media screen and (max-width: 768px) {
+  body {
+    margin: 0px;
+    height: 1000px;
+    background-color: rgb(119, 192, 248);
+
+    
+  }
+
+  h1 {
+    text-align: center;
+    color: rgb(18, 25, 105);
+    font-size: 40px;
+    border-style: solid;
+    border: 5px solid #0f3a77;
+    border-radius: 25px;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-shadow: 2px 3px 2px rgb(255, 255, 255);
+  }
+  #p1 {
+    padding-top:20px;
+    padding-bottom: 30px;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(61, 68, 170);
+    margin-left:37px;
+    margin-right: 37px;
+  }
+  .container {
+    border-radius: 5px;
+    background-color: #819eb8;
+    padding: 23px;
+    margin-left: 70px;
+    margin-right: 70px;
+  
+  }
 }
 
-h1 {
-  text-align: center;
-  color: rgb(148, 219, 148);
+
+@media screen and (min-width: 768px) {
+  body {
+    margin: 0px;
+    height: 1000px;
+    background-color: rgb(155, 212, 255);
+  }
+
+  h1 {
+    padding: 20px;
+    margin-left: 500px;
+    margin-right: 500px;
+    color: rgb(0, 0, 0);
+    font-size: 40px;
+    text-align: center;
+    border-style: solid;
+    border: 5px solid #0f3a77;
+    border-radius: 25px;
+    text-shadow: 4px 3px 2px white;
+
+  }
+  #p1 {
+    padding-top:20px;
+    padding-bottom: 30px;
+    text-align: center;
+    font-size: 25px;
+    color: rgb(61, 68, 170);
+  }
+  .container {
+    border-radius: 5px;
+    background-color: #819eb8;
+    padding: 23px;
+    margin-left: 300px;
+    margin-right: 300px;
+  
+  }
+
 }
 
-#p1 {
-  text-align: center;
-  font-size: 25px;
-  color: rgb(148, 219, 148);
-}
+
 
 
 ul {
@@ -61,7 +124,7 @@ textarea {
 
 
 input[type=submit] {
-  background-color: #e595e5;
+  background-color: #d0d1dd;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -73,13 +136,7 @@ input[type=submit]:hover {
   background-color: #16335f;
 }
 
-.container {
-  border-radius: 5px;
-  background-color: #e671b9;
-  padding: 20px;
-  margin-left: 30px;
-  margin-right: 30px;
-}
+
 
 
 @media screen and (max-width: 600px) {
