--- a/style4.css
+++ b/style4.css
@@ -1,9 +1,77 @@
-body {
-    margin: 0px; 
-    height: 1000px; 
-      background: rgb(165, 165, 197);
+@media screen and (max-width: 768px) {
+  body {
+    margin: 0px;
+    height: 2000px;
+    background-color: rgb(253, 199, 255);
+
+    
   }
-  
+
+  h1 {
+    text-align: center;
+    color: rgb(81, 0, 85);
+    font-size: 60px;
+    border-style: solid;
+    border: 5px solid #93056d;
+    border-radius: 25px;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-shadow: 4px 3px 2px rgb(171, 117, 163);
+  }
+
+  #tag {
+    margin:30px;
+    text-align:center;
+    font-size: 21px;
+  }
+
+  img {
+        
+    width:  400px;
+    height: 400px;
+    object-fit: cover;
+    margin-left:40px;
+    margin-right:40px;
+    border: 6px solid rgb(90, 18, 83); 
+}
+}
+
+@media screen and (min-width:768px) {
+  body {
+    margin: 0px;
+    height: 2000px;
+    background-color: rgb(253, 199, 255);
+  }
+
+  h1 {
+    padding: 20px;
+    margin-left: 500px;
+    margin-right: 500px;
+    color: rgb(81, 0, 85);
+    font-size: 60px;
+    text-align: center;
+    border-style: solid;
+    border: 5px solid #93056d;
+    border-radius: 25px;
+    text-shadow: 4px 3px 2px rgb(171, 117, 163);
+  }
+
+  #tag {
+    text-align:center;
+    font-size:35px;
+  }
+
+  img {
+    width:  400px;
+    height: 400px;
+    object-fit: cover;
+    margin-left:40px;
+    margin-right:15px;
+    border: 6px solid rgb(90, 18, 83); 
+}
+}
+
+
   ul {
       list-style-type: none;
       margin: 0;
@@ -24,47 +92,14 @@ body {
       text-decoration: none;
     }
     
-    /* Change the link color to #111 (black) on hover */
     li a:hover {
       background-color: rgb(162, 198, 240);
     }
-
-    h1 {
-        text-align: center; 
-        font-size: 45px;
-        color: rgb(154, 10, 154);
-        padding-top: 10px;
-    }
-    h2{
-
-    text-align: center; 
-    font-size: 25px;
-    padding: 10px;
-    color: rgb(154, 10, 154);
-
-    }
-
-    img {
-        
-      width:  400px;
-      height: 400px;
-      object-fit: cover;
-      margin: 10px;
-      display: flexbox;  
-      
-      border: 5px solid #555; 
-  }
-
-
   
   
   .column {
     justify-content: center;  
   }
-    body {
-      background-color: lightblue;
-    }
-
 
 
 @media screen and (max-width: 600px) {
@@ -74,7 +109,6 @@ body {
     justify-content: center;
     
   }
-
 
 }
 
