--- a/style1.css
+++ b/style1.css
@@ -6,7 +6,7 @@
     height: 1000px;
     background-color: rgb(161, 116, 190);
 
-    
+
   }
 
   h1 {
@@ -21,46 +21,48 @@
     text-shadow: 4px 3px 2px black;
   }
 
-#pT {
-  text-align: center;
-  font-size: 26px;
-  font-weight: bold;
-  color: white;
+  #pT {
+    text-align: center;
+    font-size: 26px;
+    font-weight: bold;
+    color: white;
 
-}
-#line {
-  padding-top:20px;
-  text-align:center;
-  font-weight: bold;
-  font-size: 17px;
-  color: rgb(255, 204, 255);
-}
+  }
 
-#p2 {
-  text-align: center;
-  font-size: 20px;
-  color: white;
-  padding-top:15px;
-  margin-left: 22px;
-  margin-right: 22px;
-}
+  #line {
+    padding-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 17px;
+    color: rgb(255, 204, 255);
+  }
+
+  #p2 {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    padding-top: 15px;
+    margin-left: 22px;
+    margin-right: 22px;
+  }
 
 
-#slideshow {
-  list-style: none;
-  margin-left: 50px;
-  position: relative;
-  width:80%;
-  height:100%;
-  display: inline-block;
-}
-.aa {
-  text-align: center;
-  color: rgb(245, 116, 245);
-  font-size: 19px;
-  padding-top: 15px;
-  padding-bottom:40px;
-}
+  #slideshow {
+    list-style: none;
+    margin-left: 50px;
+    position: relative;
+    width: 80%;
+    height: 100%;
+    display: inline-block;
+  }
+
+  .aa {
+    text-align: center;
+    color: rgb(245, 116, 245);
+    font-size: 19px;
+    padding-top: 15px;
+    padding-bottom: 40px;
+  }
 
 }
 
@@ -92,17 +94,18 @@
     color: white;
   }
 
-  
+
   #line {
     font-weight: bold;
     font-size: 50px;
     color: rgb(255, 204, 255);
   }
+
   #p2 {
     text-align: center;
     font-size: 20px;
     color: white;
-    padding-top:20px;
+    padding-top: 20px;
     margin-left: 40px;
     margin-right: 40px;
   }
@@ -110,12 +113,14 @@
   #slideshow {
     list-style: none;
     margin-left: 280px;
-    padding-top:40px;;
+    padding-top: 40px;
+    ;
     position: relative;
-    width:60%;
-    height:100%;
+    width: 60%;
+    height: 100%;
     display: inline-block;
   }
+
   .aa {
     text-align: center;
     color: purple;
@@ -124,95 +129,114 @@
   }
 
   #line {
-    margin-left:20px;
+    margin-left: 20px;
   }
 }
 
 
 
 
-html,body {
-  width:100%;
-  height:100%;
-}
+html,
 body {
- margin: 0;
-}
-.container 
-{
-width:100%;
-height:100%;
+  width: 100%;
+  height: 100%;
 }
 
-.elemnt,.elemnt1,.elemnt2,.elemnt3 {
-position: absolute;
-left: 0;
-width: 100%;
-background-repeat: no-repeat;
-background-size: cover;
-height: 70%;
-display: inline-block;
-text-align: center;
+body {
+  margin: 0;
 }
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+.elemnt,
+.elemnt1,
+.elemnt2,
+.elemnt3 {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 70%;
+  display: inline-block;
+  text-align: center;
+}
+
 .elemnt {
   animation: xfade 16s 8s infinite;
   background-image: url(Homeless1.jpg);
 }
+
 .elemnt1 {
   animation: xfade 16s 6s infinite;
-  
+
   background-image: url(Homeless15.jpg);
-  
+
 }
+
 .elemnt2 {
   animation: xfade 16s 2s infinite;
-  
+
   background-image: url(Homeless2.jpg);
 }
 
-  
-@keyframes xfade{
+
+@keyframes xfade {
   17% {
-    opacity:1;
+    opacity: 1;
   }
+
   25% {
-    opacity:0;
+    opacity: 0;
   }
+
   92% {
-    opacity:0;
+    opacity: 0;
   }
 }
-@keyframes xfade1{
+
+@keyframes xfade1 {
   17% {
-    opacity:1;
+    opacity: 1;
   }
+
   25% {
-    opacity:0;
+    opacity: 0;
   }
+
   92% {
-    opacity:0;
+    opacity: 0;
   }
 }
-@keyframes xfade2{
+
+@keyframes xfade2 {
   17% {
-    opacity:1;
+    opacity: 1;
   }
+
   25% {
-    opacity:0;
+    opacity: 0;
   }
+
   92% {
-    opacity:0;
+    opacity: 0;
   }
 }
-@keyframes xfade3{
+
+@keyframes xfade3 {
   17% {
-    opacity:1;
+    opacity: 1;
   }
+
   25% {
-    opacity:0;
+    opacity: 0;
   }
+
   92% {
-    opacity:0;
+    opacity: 0;
   }
 }
 
